tests/ui/specialization/min_specialization/next-solver-region-resolution.stderr
error[E0046]: not all trait items implemented, missing: `Item`
  --> $DIR/next-solver-region-resolution.rs:12:1
   |
LL |       type Item;
   |       --------- `Item` from trait
...
LL | / impl<'a, T> Foo for &'a T
LL | |
LL | | where
LL | |     Self::Item: 'a,
   | |___________________^ missing `Item` in implementation

error[E0283]: type annotations needed: cannot satisfy `&'a T: Foo`
  --> $DIR/next-solver-region-resolution.rs:12:21
   |
LL | impl<'a, T> Foo for &'a T
   |                     ^^^^^
   |
note: multiple `impl`s satisfying `&'a T: Foo` found
  --> $DIR/next-solver-region-resolution.rs:12:1
   |
LL | / impl<'a, T> Foo for &'a T
LL | |
LL | | where
LL | |     Self::Item: 'a,
   | |___________________^
...
LL | / impl<'a, T> Foo for &T
LL | |
LL | | where
LL | |     Self::Item: Baz,
   | |____________________^

error[E0046]: not all trait items implemented, missing: `Item`
  --> $DIR/next-solver-region-resolution.rs:19:1
   |
LL |       type Item;
   |       --------- `Item` from trait
...
LL | / impl<'a, T> Foo for &T
LL | |
LL | | where
LL | |     Self::Item: Baz,
   | |____________________^ missing `Item` in implementation

error: cannot normalize `<&_ as Foo>::Item: '_`
  --> $DIR/next-solver-region-resolution.rs:19:1
   |
LL | / impl<'a, T> Foo for &T
LL | |
LL | | where
LL | |     Self::Item: Baz,
   | |____________________^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0046, E0283.
For more information about an error, try `rustc --explain E0046`.
